<?xml version="1.0"?>
<package format="2">
  <name>lidar_lane_detector</name>
  <version>0.0.0</version>
  <description>The lidar_lane_detector package</description>

  <maintainer email="suyeon@todo.todo">suyeon</maintainer>
  <license>TODO</license>

  <!-- 의존성 설정 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 컴파일 시 필요한 패키지 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <!-- 패키지 빌드 후 다른 패키지에서 이 패키지를 사용할 때 필요한 의존성 -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  
  <!-- 런타임 시 필요한 의존성 -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <!-- 추가 정보는 여기에 배치 -->
  </export>
</package>
